--- a/super_model/templates/widgets/_get_comment.html
+++ b/super_model/templates/widgets/_get_comment.html
@@ -1,4 +1,4 @@
-{% load main_tags %}
+{% load prozdo_main_tags %}
 {% load staticfiles %}
 <div class="single-comment {{ comment_class }}">
 <div class="comment-top">
