--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -47,7 +47,7 @@
 </div>
 <div class="col-lg-8 col-md-6 col-sm-8 col-xs-12">
 {% block breadcrumbs %}
-
+{% breadcrumbs %}
 {% endblock breadcrumbs %}
 
 
