--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -8,7 +8,7 @@
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+{% metatags %}
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
