--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -45,7 +45,7 @@
 <div class="row">
 <div class="col-lg-2 col-md-3 hidden-sm hidden-xs" id="sidebar-left">
     {% block sidebar_left %}
-
+{% best_comments %}
 {% endblock sidebar_left %}
 </div>
 <div class="col-lg-8 col-md-6 col-sm-8 col-xs-12">
@@ -62,6 +62,7 @@
 <div class="col-lg-2 col-md-3 col-sm-4 hidden-xs" id="sidebar-right">
 {% block sidebar_right %}
 {% user_menu %}
+{% recent_comments %}
 {% endblock sidebar_right %}
 </div>
 </div>
