--- a/main/templates/main/widgets/_get_comment.html
+++ b/main/templates/main/widgets/_get_comment.html
@@ -13,7 +13,7 @@
 </div>
 {% else %}
 
-<img alt="Гость" class="img-rounded" src="{% static "prozdo_main/images/guest.png" %}">
+<img alt="Гость" class="img-rounded" src="{% static "main/images/guest.png" %}">
 
 {% endif %}
 </div>
