--- a/main/templates/main/post/_post_list_grid.html
+++ b/main/templates/main/post/_post_list_grid.html
@@ -7,7 +7,7 @@
      <h5><a href="{{ obj.get_absolute_url }}">{{ obj }}</a></h5>
      </div>
      <div class="post-comment-count-grid">
-    <a href="{{ obj.get_absolute_url }}#comments">{{ obj.published_comments_count }}</a>
+    <span>Количество отзывов: </span><a href="{{ obj.get_absolute_url }}#comments">{{ obj.published_comments_count }}</a>
 </div>
     </div>
     </div>
