--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -72,23 +72,6 @@
 
             <div class="col-xs-12">
 
-  <div id="blog-full-mark-block">
-             <div class="blog-mark-block">
-        <span class="blog-current-mark">Материал сочли полезным: <span class="blog-current-mark-span">{{ obj.mark }}</span></span>
-
-
-    </div>   
-       {% if user.is_regular %}
-        {% if can_mark_blog %}
-         <input class="blog-unmark-button btn btn-cancel hidden" type="button" value='Отозвать оценку'>
-         <input class="blog-mark-button btn btn-success" type="button" value='Материал полезен'>
-        {% else %}
-        <input class="blog-unmark-button btn btn-cancel" type="button" value='Отозвать оценку'>
-        <input class="blog-mark-button btn btn-success hidden" type="button" value='Материал полезен'>
-        {% endif %}
-    {% endif %}
-      </div>
-
 
                 <div id="post-block">
                     {% if obj.body %}
@@ -104,14 +87,18 @@
 
             {% if obj.is_plant and obj.recipes.get_available.exists %}
             <h2>Рецепты:</h2>
+                <ul>
                 {% for recipe in obj.recipes.get_available %}
-                <a href="{{ recipe.get_absolute_url }}">{{ recipe }}</a>
+                <li><a href="{{ recipe.get_absolute_url }}">{{ recipe }}</a></li>
             {% endfor %}
+                </ul>
             {% elif obj.is_recipe and obj.plants.get_available.exists %}
                 <h2>Растения:</h2>
+                <ul>
             {% for plant in obj.plants.get_available %}
-                <a href="{{ plant.get_absolute_url }}">{{ plant }}</a>
+                <li><a href="{{ plant.get_absolute_url }}">{{ plant }}</a></li>
                 {% endfor %}
+               </ul>
             {% endif %}
 
 
