--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -100,5 +100,83 @@ margin-left: 199px;
 margin-left: 202px;
 }
 
+.post-right-block {
+  #cancel-mark-button {
+    font-size: 0.8em;
+  }
+
+  .star {
+    background: url(../images/star.gif) no-repeat;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+
+  &:hover {
+  background: url(../images/star_hover.gif) no-repeat;
+  }
+  }
+}
+
+.box-shadow-mixin {
+box-shadow: 0 0 0 1px rgba(0,0,0,.1),0 3px 4px -3px rgba(0,0,0,.3);
+}
+
+#social-login {
+  a {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+  }
+
+  #google-login {
+    background: url(../images/social/google.jpg) no-repeat;
+  }
+
+  #facebook-login {
+    background: url(../images/social/facebook.jpg) no-repeat;
+  }
+
+  #vk-login {
+    background: url(../images/social/vk.jpg) no-repeat;
+  }
+.box-shadow-mixin;
+margin-bottom: 10px;
+padding: 10px;
+width: 180px;
+}
 
 
+
+#ajax-login-form {
+  position: absolute;
+    top: 40px;
+    width: auto;
+    z-index: 10;
+    padding: 20px;
+    .box-shadow-mixin;
+    background-color: white;
+
+  .login-form-inner {
+  margin-bottom: 5px;
+  }
+
+
+  /* do not group these rules */
+*::-webkit-input-placeholder {
+    font-size: 0.8em;
+}
+*:-moz-placeholder {
+    /* FF 4-18 */
+    font-size: 0.8em;
+}
+*::-moz-placeholder {
+    /* FF 19+ */
+    font-size: 0.8em;
+}
+*:-ms-input-placeholder {
+    /* IE 10+ */
+    font-size: 0.8em;
+}
+
+
+}
