--- a/super_model/templates/super_model/post/post_detail.html
+++ b/super_model/templates/super_model/post/post_detail.html
@@ -1,5 +1,5 @@
 {% extends base_template %}
-{% load prozdo_main_tags %}
+{% load main_tags %}
 {% load helper_tags %}
 {% load compress %}
 {% block content %}
