--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -45,6 +45,7 @@
 <div class="row">
 <div class="col-lg-2 col-md-3 hidden-sm hidden-xs" id="sidebar-left">
     {% block sidebar_left %}
+    {% search_form %}
     <h3>Популярные сообщения</h3>
 {% best_comments %}
 {% endblock sidebar_left %}
