--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -427,3 +427,19 @@ margin-bottom: 5px;
   }
   margin-bottom: 20px;
 }
+
+
+#mobile-menu-button {
+  width: 24px;
+  height: 15px;
+  display: block;
+  cursor: pointer;
+  background: url(../images/mobile-menu-button.png) no-repeat;
+  &.active {
+  background: url(../images/mobile-menu-button-active.png) no-repeat;
+  }
+
+}
+
+
+
