contact form added

--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -52,6 +52,7 @@
     {% search_form %}
     <h3>Популярные сообщения</h3>
 {% best_comments %}
+{% get_contact_form %}
 {% endblock sidebar_left %}
 </div>
 <div class="col-lg-8 col-md-6 col-sm-8 col-xs-12">
