--- a/main/static/main/less/variables.less
+++ b/main/static/main/less/variables.less
@@ -1,18 +1,23 @@
 //Buttons
-@btn-menu-color:              #fff;
+@btn-menu-color:              #FFFFFF;
 @btn-menu-bg:                 #958369;
 @btn-menu-border:             darken(@btn-menu-bg, 15%);
 
 @btn-cancel-color: 			  @text-color;  
-@btn-cancel-bg:				  #D09C55;
+@btn-cancel-bg:				  #909090;
 @btn-cancel-border: 		  darken(@btn-cancel-bg, 15%);
 
+@btn-warning-color: 			  @text-color;
+@btn-warning-bg:				  #909090;
+@btn-warning-border: 		  darken(@btn-cancel-bg, 15%);
 
-@btn-danger-bg:				  #A54940;
+
+
+@btn-danger-bg:				  #660000;
 @btn-danger-border: 		  darken(@btn-danger-bg, 15%);
 
 
-@btn-success-bg:			  #59C03D;
+@btn-success-bg:			  #330099;
 @btn-success-border: 		  darken(@btn-success-bg, 15%);
 
 
@@ -20,6 +25,10 @@
 @btn-empty-bg:				@body-bg;
 @btn-empty-border:			@btn-menu-border;
 
+
+@btn-default-color: 			#FFFFFF;
+@btn-default-bg:				#330099;
+@btn-default-border:			darken(@btn-default-bg, 15%);
 
 
 //Breadcrumb
