--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -253,7 +253,7 @@ color: green;
 }
 
 .comment-unconfirmed {
-color: #CC6633;
+color: #C8C8C8;
 
 }
 
@@ -428,18 +428,6 @@ margin-bottom: 5px;
   margin-bottom: 20px;
 }
 
-
-#mobile-menu-button {
-  width: 24px;
-  height: 15px;
-  display: block;
-  cursor: pointer;
-  background: url(../images/mobile-menu-button.png) no-repeat;
-  &.active {
-  background: url(../images/mobile-menu-button-active.png) no-repeat;
-  }
-
-}
 
 
 
