--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -117,7 +117,7 @@ margin-left: 199px;
 margin-left: 202px;
 }
 
-.post-right-block {
+.post-top-block {
   #cancel-mark-button {
     font-size: 0.8em;
   }
@@ -430,4 +430,18 @@ margin-bottom: 5px;
 
 
 
+.post-grid-item {
+  .box-shadow-mixin;
+  padding: 5px;
 
+  .post-info-grid {
+
+  }
+
+  .post-comment-count-grid {
+    float: right;
+    font-size: 0.9em;
+    font-style: italic;
+  }
+
+}
