--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -75,14 +75,14 @@
 
                 </div>
 
-            {% if obj.is_plant and obj.recipes.get_available.exists %}
+            {% if obj.is_plant or obj.is_usage_area and obj.recipes.get_available.exists %}
             <h2>Рецепты:</h2>
                 <ul>
                 {% for recipe in obj.recipes.get_available %}
                 <li><a href="{{ recipe.get_absolute_url }}">{{ recipe }}</a></li>
             {% endfor %}
                 </ul>
-            {% elif obj.is_recipe and obj.plants.get_available.exists %}
+            {% elif obj.is_recipe or obj.is_usage_area and obj.plants.get_available.exists %}
                 <h2>Растения:</h2>
                 <ul>
             {% for plant in obj.plants.get_available %}
@@ -90,6 +90,18 @@
                 {% endfor %}
                </ul>
             {% endif %}
+
+            {% if not obj.is_usage_area and obj.usage_areas.get_available.exists %}
+            <h2>Области применения:</h2>
+                <ul>
+            {% for usage_area in obj.usage_areas.get_available %}
+                <li><a href="{{ usage_area.get_absolute_url }}">{{ usage_area }}</a></li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+
+
+
 
 
                     <div id="comment-filter-form">
