--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -13,6 +13,7 @@
             <a href="{{ obj.update_url }}">Редактировать</a>
 
         {% endif %}
+        {% if not obj.is_usage_area %}
         <div class="row">
             <div class="post-top-block">
 
@@ -56,7 +57,7 @@
 
 
         </div>
-
+{% endif %}
 
         <div class="row">
 
@@ -102,7 +103,7 @@
 
 
 
-
+{% if not obj.is_usage_area %}
 
                     <div id="comment-filter-form">
                         <form method="get">
@@ -130,10 +131,13 @@
                         {% endfor %}
                     </div>
 
+            {% endif %}
+
+
                     {% if paginator.num_pages > 1 %}
                         {% include 'super_model/base/_pager.html' with url=obj.get_absolute_url %}
                     {% endif %}
-
+{% if not obj.is_usage_area %}
                     <div>
                         <h3>Оставьте отзыв:</h3>
                         <div id="answer-to-block" class="hidden">
@@ -149,11 +153,15 @@
                             </div>
                             <input class="btn btn-success" type="submit" value="Отправить">
                         </form>
-                    </div>
 
+                    </div>
+    {% endif %}
             </div>
+
         </div>
+
     </div>
+
 {% endblock content %}
 
 
