changed post_list_grid to post_list_content

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -430,18 +430,8 @@ margin-bottom: 5px;
 
 
 
-.post-grid-item {
-  .box-shadow-mixin;
-  padding: 5px;
-
-  .post-info-grid {
+.post-content-item {
 
   }
 
-  .post-comment-count-grid {
-    float: right;
-    font-size: 0.9em;
-    font-style: italic;
-  }
 
-}
