super_model portlets changed to get title from kwarg

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -434,4 +434,26 @@ margin-bottom: 5px;
 
   }
 
+#middle-section {
 
+}
+
+
+#header {
+  background-color: #94F358;
+  padding: 20px;
+}
+
+#sidebar-left, #sidebar-right {
+  background-color: #C5F9A4;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#breadcrumb {
+
+}
+
+#full-post {
+  margin: 10px;
+}
