--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -9,6 +9,9 @@
         <input id="post-pk" type="hidden" value="{{ obj.pk }}">
 
         <h1><a class="post-title" href="{{ obj.get_absolute_url }}">{{ obj }}</a></h1>
+    {% if obj.is_plant %}
+        {{ obj.synonyms_text }}
+    {% endif %}
         {% if user.is_admin or user.is_author %}
             <a href="{{ obj.update_url }}">Редактировать</a>
 
