Image removed from search results

--- a/main/templates/search/search.html
+++ b/main/templates/search/search.html
@@ -5,7 +5,7 @@
             <h3>Результаты поиска</h3>
             <table class="table table-bordered">
             <thead>
-            <th>Результат</th><th>Синонимы</th><th>Изображение</th><th>Тип материала</th>
+            <th>Результат</th><th>Синонимы</th><th>Тип материала</th>
             </thead>
             {% for result in page_obj.object_list %}
                   <tr>
@@ -16,11 +16,6 @@
                       {% endif %}
                   </td>
 
-                  <td>
-                   {% if result.object.thumb110 %}
-                   <a href="{{ result.object.get_absolute_url }}"><img src="{{ result.object.thumb110 }}"></a>
-                   {% endif %}
-                  </td>
                   <td>
                     {{ result.object.type_str }}
                   </td>
