Footer info added

--- a/main/templates/main/base/base.html
+++ b/main/templates/main/base/base.html
@@ -77,7 +77,14 @@
 
 <div class="row">
 {% block footer %}
+ <div id="footer-info">
+    Вся информация на сайте предоставляется исключительно в справочных целях. Напоминаем, что самолечение недопустимо и в случае заболевания рекомендуем обратиться к врачу.
+    Перед применением любого лекарственного растения обязательно проконсультируйтесь с врачом.
+</div>
 
+<div id="site-info">
+    Авторское право © 2015-2016 Medavi.Ru. Все права на материалы, размещенные на сайте, защищены в соответствии с российским и международным законодательством об авторском праве и смежных правах. При любом использовании материалов сайта ссылка (для интернет-сайтов — гиперссылка) на Medavi.ru обязательна. По вопросам работы сайта обращайтесь на info@medavi.ru
+</div>
 {% endblock footer %}
 </div>
 </div>
