--- a/main/static/main/less/variables.less
+++ b/main/static/main/less/variables.less
@@ -17,7 +17,7 @@
 @btn-danger-border: 		  darken(@btn-danger-bg, 15%);
 
 
-@btn-success-bg:			  #330099;
+@btn-success-bg:			  #44786f;
 @btn-success-border: 		  darken(@btn-success-bg, 15%);
 
 
