--- a/main/templates/main/post/post_list.html
+++ b/main/templates/main/post/post_list.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% block sidebar_left %}
 
-    <div>
+    <div class="post-filter-form">
 
         <form id="post-list-form" method="get" action="{{ submit_url }}">
 
