Required fields marked with star

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -23,6 +23,12 @@ table {
 
 
 
+.required label:after {
+    content: "*";
+    color: red;
+}
+
+
 .form-mixin {
    input, select {
     display: block;
