--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -383,7 +383,9 @@
                     var frm = $('#comment-form');
                     var innerForm = frm.find('#comment-form-inner');
                     var button = frm.find('.btn');
+                    var inputs = frm.find('input, textarea');
                     button.attr('disabled', 'disabled');
+                    inputs.attr('disabled', 'disabled');
                     $.ajax({
                         type: 'POST',
                         url: frm.attr('action'),
@@ -399,11 +401,13 @@
                             else {
                                 innerForm.html(data.comment_form);
                                 button.removeAttr('disabled');
+                                inputs.removeAttr('disabled');
                             }
 
                         },
                         error: function (data) {
                             button.removeAttr('disabled');
+                            inputs.removeAttr('disabled');
                         }
                     });
 
