--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -384,12 +384,13 @@
                     var innerForm = frm.find('#comment-form-inner');
                     var button = frm.find('.btn');
                     var inputs = frm.find('input, textarea');
+                    var formData = frm.serialize();
                     button.attr('disabled', 'disabled');
                     inputs.attr('disabled', 'disabled');
                     $.ajax({
                         type: 'POST',
                         url: frm.attr('action'),
-                        data: frm.serialize(),
+                        data: formData,
                         success: function (data) {
 
                             if (data.status == 1) {
