--- a/main/templates/main/post/_plant_list_content.html
+++ b/main/templates/main/post/_plant_list_content.html
@@ -1,5 +1,5 @@
 <table class="table" id="plant-table">
-<thead><tr><th class="col_1"><span>Растение</span></th><th class="col_2"><span>Синонимы</span></th><th class="col_3"><span>Области применения</span></th><th class="col_4"><span>Отзывов</span></th></tr></thead>
+<thead><tr><th class="col_1"><p>Растение</p></th><th class="col_2"><p>Синонимы</p></th><th class="col_3"><p>Области применения</p></th><th class="col_4"><p>Отзывов</p></th></tr></thead>
     <tbody>
     {% for obj in objs %}
 <tr>
