--- a/main/templates/main/widgets/_get_comment.html
+++ b/main/templates/main/widgets/_get_comment.html
@@ -53,7 +53,9 @@
      <div class="comment-confirmed"> Отзыв подтвержден</div>
  {% else %}
      <div class="comment-unconfirmed">Отзыв не подтвержден</div>
+     {% if comment.email %}
      <input type="button" value="Подтвердить" class="confirm-comment btn btn-default">
+    {% endif %}
     {% endif %}
 </div>
 
