added wikipedia_link new load

--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -104,6 +104,13 @@
                 {% endfor %}
             </ul>
             {% endif %}
+
+            {% if obj.is_plant and obj.wikipedia_link %}
+ <div>
+<a href="{{ obj.wikipedia_link }}">Ссылка на страницу Wikipedia</a>
+</div>
+    {% endif %}
+
             </div>
 
 
