removed empty usage areas from form main.less changes

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -498,6 +498,7 @@ padding-top: 10px;
 
   #post-related-list {
     font-size: 1.1em;
+    margin-left: 20px;
 
     li {
       color: #57857c;
@@ -839,6 +840,11 @@ label {
   }
 
 
+}
 
+#id_usage_areas {
+
+  li {
+  }
 
 }
