#id_usage_areas font size is reduced and hyphens added

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -845,6 +845,10 @@ label {
 #id_usage_areas {
 
   li {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    font-size: 0.8em;
   }
 
 }
